--- a/package.json
+++ b/package.json
@@ -43,5 +43,8 @@
     "lint:fix": "npm run lint -- --fix",
     "format": "prettier ./src --write",
     "deploy": "gh-pages -d dist"
-  }
+  },
+"dependencies": {
+  "yup": "^1.6.1" 
+}
 }
